--- a/stylesheet-test/stylesheet.html
+++ b/stylesheet-test/stylesheet.html
@@ -6,10 +6,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- 외부 스타일 시트 -->
+    <link rel="stylesheet" href="stylesheet.css" />
+    <style>
+        /*  head 내부에 추가한 내부 style  */
+        div {
+            background-color: green;
+        }
+    </style>
 </head>
 
 <body>
-    <div style="width:300px ; height : 300px;"></div>
+    <!-- 인라인 style -->
+    <h1>Hello</h1>
+    <div style="width:300px;height:300px;"></div>
 </body>
 
 </html>
