--- a/box-shadow-test/index.html
+++ b/box-shadow-test/index.html
@@ -25,6 +25,17 @@
             padding: 20px;
             border: 10px solid #00f;
         }
+
+        button {
+            /*부모 요소 기준으로 글자 크기를 지정*/
+            font-size: 2em;
+            background-color: #fff;
+            border: 1px solid #222;
+            /* 가로, 세로, 번짐 */
+            /* 가로, 세로, 흐림, 번짐  */
+            box-shadow: 20px 20px 10px #000;
+            
+        }
     </style>
 </head>
 
@@ -39,9 +50,14 @@
 
     </div>
     <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur at hic nemo earum aut quas aliquid praesentium
-        ut architecto quasi, omnis cupiditate suscipit enim harum quo rem perferendis. Illo, quos.
     </div>
+    <hr>
+    <h1>
+        box shadow 속성
+    </h1>
+    <button>
+        Do it!
+    </button>
 </body>
 
 </html>
