--- a/float-test/index.html
+++ b/float-test/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>float</title>
     <style>
+        body {
+            background-color: black;
+            color: white;
+        }
+
         img {
             float: left;
             margin-right: 40px;
@@ -26,6 +31,7 @@
         #floatBox1 {
             background-color: yellow;
             float: left;
+            color: black;
         }
 
         #floatBox2 {
@@ -36,34 +42,44 @@
 </head>
 
 <body>
-    <h3>float 속성</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis impedit laboriosam? Similique, iure. Quos,
-        pariatur ad. Temporibus, reiciendis? Exercitationem illo perspiciatis excepturi voluptatem veritatis. Possimus
-        doloremque atque quisquam magni?</p>
+    <div id="root">
+        <h3>Float 속성</h3>
+        <hr>
+        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis impedit laboriosam? Similique, iure. Quos,
+            pariatur ad. Temporibus, reiciendis? Exercitationem illo perspiciatis excepturi voluptatem veritatis.
+            Possimus
+            doloremque atque quisquam magni?</p>
 
-    <img src="images/leaves.jpg" width="100px" />
-    <img src="images/leaves.jpg" width="100px" />
+        <img src="images/leaves.jpg" width="100px" />
+        <img src="images/leaves.jpg" width="100px" />
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis impedit laboriosam? Similique, iure. Quos,
-        pariatur ad. Temporibus, reiciendis? Exercitationem illo perspiciatis excepturi voluptatem veritatis. Possimus
-        doloremque atque quisquam magni?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis impedit laboriosam? Similique, iure. Quos,
+            pariatur ad. Temporibus, reiciendis? Exercitationem illo perspiciatis excepturi voluptatem veritatis.
+            Possimus
+            doloremque atque quisquam magni?</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis impedit laboriosam? Similique, iure. Quos,
-        pariatur ad. Temporibus, reiciendis? Exercitationem illo perspiciatis excepturi voluptatem veritatis. Possimus
-        doloremque atque quisquam magni?</p>
-        
-    <div class="wrapper">
-        <div class="floatBox" id="floatBox1">
-            박스1
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis impedit laboriosam? Similique, iure. Quos,
+            pariatur ad. Temporibus, reiciendis? Exercitationem illo perspiciatis excepturi voluptatem veritatis.
+            Possimus
+            doloremque atque quisquam magni?</p>
+
+        <div class="wrapper">
+            <div class="floatBox" id="floatBox1">
+                박스1
+            </div>
+            <div class="floatBox" id="floatBox2">
+                박스2
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quasi doloremque, quod incidunt tenetur
+                fugit
+                repellendus placeat illo quaerat quisquam doloribus tempora esse. Laudantium quaerat, optio aspernatur
+                quis
+                explicabo eos.
+            </p>
         </div>
-        <div class="floatBox" id="floatBox2">
-            박스2
-        </div>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quasi doloremque, quod incidunt tenetur fugit
-            repellendus placeat illo quaerat quisquam doloribus tempora esse. Laudantium quaerat, optio aspernatur quis
-            explicabo eos.
-        </p>
+
+        <hr>
     </div>
 </body>
 
