--- a/border-style-test/index.html
+++ b/border-style-test/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>border style 속성</title>
+    <title>Border style 속성</title>
+    <style>
+    </style>
 </head>
 
 <body>
