--- a/responsive-test/object-fit-test/index.html
+++ b/responsive-test/object-fit-test/index.html
@@ -8,10 +8,22 @@
     <title></title>
     <style>
         /* object-fit */
+        html,
+        body {
+            background-color: black;
+            color: white;
+            font-size: xx-small;
+        }
+
+        div {
+            font-size: xx-small;
+        }
+
         .container {
-            width: 200px;
-            height: 400px;
-            border: 1px solid black;
+            font-size: small;
+            width: 100px;
+            height: 200px;
+            border: 1px solid chartreuse;
         }
 
         .wrap {
@@ -22,22 +34,36 @@
         }
 
         .fill {
+            /* 비율 무시요소크기에 맞게 사진 구겨넣음 */
             object-fit: fill;
         }
 
+        hr {
+            border-color: chartreuse;
+        }
+
         .contain {
+            /* 이미지 비율을 유지하면서 요소 크기에 맞춤*/
             object-fit: contain;
         }
 
         .cover {
+            /* 비율을 유지하면서 요소의 전체 영역을 채울 수 있을만큼 확대,
+            영역을 채우기 위해 콘텐츠의 일부가 잘릴 수 있음 */
             object-fit: cover;
         }
 
         .none {
+            /*
+                콘텐츠의 원래 크기 유지
+            */
             object-fit: none;
         }
 
         .scale-down {
+            /*
+                none과 contain 중 콘텐츠 크기가 더 작아지는 값 선택
+            */
             object-fit: scale-down;
         }
 
@@ -49,9 +75,9 @@
 </head>
 
 <body>
-    <h3>
+    <h2>
         object-fit : fill | contain | cover | none | scale-down;
-    </h3>
+    </h2>
     <div>
         이미지나 비디오 등의 가로, 세로 비율을 유지하면서 크기를 조절할 수 있다
     </div>
@@ -60,35 +86,35 @@
     <div class="wrap">
         <div class="container">
             <img src="images/leaves.jpg" alt="leaves" class="fill fitImg">
-            <h3>object-fit : fill</h3>
+            <h6>object-fit : fill</h6>
             <div>
                 콘텐츠의 원래 비율을 무시하고 요소 전체 영역을 채움. 기본값
             </div>
         </div>
         <div class="container">
             <img src="images/leaves.jpg" alt="leaves" class="contain fitImg">
-            <h3>object-fit : contain</h3>
+            <h6>object-fit : contain</h6>
             <div>
                 비율을 유지하면서 요소의 전체 영역에 맞출 수 있을만큼 확대. 영역을 모두 채우지 못할 수도 있다.
             </div>
         </div>
         <div class="container">
             <img src="images/leaves.jpg" alt="leaves" class="cover fitImg">
-            <h3>object-fit : cover</h3>
+            <h6>object-fit : cover</h6>
             <div>
                 비율을 유지하면서 요소의 전체 영역을 채울 수 있을만큼 확대. 영역을 채우기 위해 콘텐츠의 일부가 잘릴 수 있다.
             </div>
         </div>
         <div class="container">
             <img src="images/leaves.jpg" alt="leaves" class="none fitImg">
-            <h3>object-fit : none</h3>
+            <h6>object-fit : none</h6>
             <div>
                 콘텐츠의 원래 크기 유지
             </div>
         </div>
         <div class="container">
             <img src="images/leaves.jpg" alt="leaves" class="scale-down fitImg">
-            <h3>object-fit : scale-down</h3>
+            <h6>object-fit : scale-down</h6>
             <div>
                 none과 contain 중 콘텐츠 크기가 더 작아지는 값 선택
             </div>
