--- a/responsive-test/media-query-card-test/index.html
+++ b/responsive-test/media-query-card-test/index.html
@@ -14,14 +14,14 @@
             <img src="https://cdn.pixabay.com/photo/2018/01/17/18/43/book-3088775_640.jpg">
             <div class="words">
                 <h3>낡은 옷은 그냥 입고 새 책을 사라.</h3>
-                <div class="name">Austin Phelps</div>
+                <div class="name">- Austin Phelps</div>
             </div>
         </div>
         <div class="card">
             <img src="https://cdn.pixabay.com/photo/2018/02/16/02/03/pocket-watch-3156771_1280.jpg">
             <div class="words">
                 <h3>일 분 전만큼 먼 시간은 없다.</h3>
-                <div class="name">Jim Bishop</div>
+                <div class="name">- Jim Bishop</div>
             </div>
         </div>
     </div>
