--- a/flex-layout-test/flex-basis.html
+++ b/flex-layout-test/flex-basis.html
@@ -9,6 +9,7 @@
         .container {
             width: 800px;
             display: flex;
+            /* flex-direction:column; */
             border: 1px solid black;
             gap: 30px;
         }
