--- a/flex-layout-test/flex-shrink.html
+++ b/flex-layout-test/flex-shrink.html
@@ -20,9 +20,9 @@
             font-size: 2rem;
         }
 
-        .box {
+        .big {
             background-color: #222;
-            flex-basis: 150px;
+            width: 300px;
         }
 
         .wide {
@@ -49,16 +49,16 @@
 
 <body>
     <div class="container wide">
-        <div id="shrink1" class="box">
+        <div id="shrink1" class="big">
             <p>1</p>
         </div>
-        <div id="shrink2" class="box">
+        <div id="shrink2" class="big">
             <p>2</p>
         </div>
-        <div id="shrink3" class="box">
+        <div id="shrink3" class="big">
             <p>3</p>
         </div>
-        <div id="shrink4" class="box">
+        <div id="shrink4" class="big">
             <p>4</p>
         </div>
     </div>
