--- a/flex-layout-test/flex-grow.html
+++ b/flex-layout-test/flex-grow.html
@@ -25,9 +25,7 @@
             flex-basis: 150px;
         }
 
-        .wide {
-            width: 100%;
-        }
+    
 
         #grow1 {
             flex-grow: 1;
@@ -48,7 +46,7 @@
 </head>
 
 <body>
-    <div class="container wide">
+    <div class="container">
         <div id="grow1" class="box">
             <p>1</p>
         </div>
