--- a/flex-layout-test/flex-shrink.html
+++ b/flex-layout-test/flex-shrink.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-    <div class="container wide">
+    <div class="container ">
         <div id="shrink1" class="big">
             <p>1</p>
         </div>
