block, inline, inline-block test

--- a/block-inline-test/index.html
+++ b/block-inline-test/index.html
@@ -14,6 +14,15 @@
         span {
             background-color: cyan;
             display: inline;
+            width: 100px;
+            height: 100px;
+        }
+
+        .inline-block {
+            background-color: green;
+            display: inline-block;
+            width: 100px;
+            height: 100px;
         }
     </style>
 </head>
@@ -21,6 +30,7 @@
 <body>
     <div>block</div>
     <span>inline</span>
+    <div class="inline-block">inline-block</div>
 </body>
 
 </html>
