update-gridlayout-gridarea

--- a/grid-layout-test/index.html
+++ b/grid-layout-test/index.html
@@ -103,6 +103,14 @@
         <div id="box5" class="items">5</div>
     </div>
     <hr>
+    <h1>템플릿 영역을 사용해 배치</h1>
+    <div id="useTemplate" class="grid">
+        <div id="item1" class="items">1</div>
+        <div id="item2" class="items">2</div>
+        <div id="item3" class="items">3</div>
+        <div id="item4" class="items">4</div>
+        <div id="item5" class="items">5</div>
+    </div>
 </body>
 
 </html>
