--- a/pseudo-class-test/pclass1.html
+++ b/pseudo-class-test/pclass1.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pseudo class test</title>
-    <link rel="stylesheet" href="css/pclass.css"/>
+    <link rel="stylesheet" href="css/pclass.css" />
 </head>
+
 <body>
     <div class="container">
         <nav class="navi">
@@ -18,27 +20,56 @@
         </nav>
         <div id="intro" class="contents">
             <h2>이용안내</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.
             </p>
         </div>
         <div id="room" class="contents">
             <h2>객실 소개</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit,
+                veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad
+                aspernatur nulla assumenda nihil.</p>
         </div>
         <div id="reservation" class="contents">
             <h2>예약 방법 및 요금</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur nulla assumenda nihil.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat eius, odit, veniam natus
+                dignissimos maxime, eos perspiciatis corrupti qui odio? Esse voluptas alias inventore ad aspernatur
+                nulla assumenda nihil.</p>
         </div>
     </div>
 </body>
+
 </html>
