--- a/transition-test/transition.html
+++ b/transition-test/transition.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
+    <style>
+        div {
+            width: 100px;
+            height: 100px;
+            border: 1px solid black;
+            background-color: yellow;
+            transition-property: width, height;
+            transition-duration: 2s;
+            transition-timing-function: linear;
+        }
+
+        div:hover {
+            width: 300px;
+            height: 300px;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div href="#" class="button">둘러보기</div>
 </body>
+
 </html>
