--- a/flex-layout-test/flex-wrap.html
+++ b/flex-layout-test/flex-wrap.html
@@ -22,9 +22,7 @@
             flex-wrap: wrap-reverse;
         }
 
-        #flexStart {
-            
-        }
+        #flexStart {}
 
         .container {
             width: 700px;
